rustdocs/errors/rust-bitcoin-units-src-fee.rs.txt
error[E0432]: unresolved import `core`
  --> ../rust-bitcoin/units/src/fee.rs:26:5
   |
26 | use core::ops;
   |     ^^^^
   |     |
   |     you might be missing crate `core`
   |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `NumOpResult`
  --> ../rust-bitcoin/units/src/fee.rs:28:5
   |
28 | use NumOpResult as R;
   |     ^^^^^^^^^^^^^^^^ no `NumOpResult` in the root

error[E0432]: unresolved imports `crate::Amount`, `crate::FeeRate`, `crate::NumOpResult`, `crate::Weight`
  --> ../rust-bitcoin/units/src/fee.rs:30:13
   |
30 | use crate::{Amount, FeeRate, NumOpResult, Weight};
   |             ^^^^^^  ^^^^^^^  ^^^^^^^^^^^  ^^^^^^ no `Weight` in the root
   |             |       |        |
   |             |       |        no `NumOpResult` in the root
   |             |       no `FeeRate` in the root
   |             no `Amount` in the root

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internal_macros`
  --> ../rust-bitcoin/units/src/fee.rs:32:8
   |
32 | crate::internal_macros::impl_op_for_references! {
   |        ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `internal_macros`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
